News UAT/force-app/main/default/objects/Action_Plan__c/Action_Plan__c.object-meta.xml
<CustomObject>
    <description>2015-07 NewsXtend</description>
    <label>Action Plan</label>
    <nameField>
        <displayFormat>AP-{00000}</displayFormat>
        <label>Action Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>