News UAT/force-app/main/default/objects/Action_Plan__c/fields/Action_Plan_Period__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Period__c</fullName>
    <description>2015-07 NewsXtend</description>
    <label>Action Plan Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 month</fullName>
            </value>
            <value>
                <fullName>2 months</fullName>
            </value>
            <value>
                <fullName>3 months</fullName>
            </value>
            <value>
                <fullName>4 months</fullName>
            </value>
            <value>
                <fullName>5 months</fullName>
            </value>
            <value>
                <fullName>6 months</fullName>
            </value>
            <value>
                <fullName>7 months</fullName>
            </value>
            <value>
                <fullName>8 months</fullName>
            </value>
            <value>
                <fullName>9 months</fullName>
            </value>
            <value>
                <fullName>10 months</fullName>
            </value>
            <value>
                <fullName>11 months</fullName>
            </value>
            <value>
                <fullName>12 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>