News UAT/force-app/main/default/objects/Action_Plan__c/fields/Action_Plan_Status__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Status__c</fullName>
    <description>2015-07 NewsXtend</description>
    <label>Action Plan Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>