News UAT/force-app/main/default/objects/Action_Plan__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>2015-07 NewsXtend</description>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>