News UAT/force-app/main/default/objects/Action_Plan__c/fields/Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Date__c</fullName>
    <description>2015-07 NewsXtend</description>
    <label>Go Live Date</label>
    <type>Date</type>
</CustomField>