News UAT/force-app/main/default/objects/Action_Plan__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>2015-08-28 NewsXtend Phase 2 - This field will be updated by VF page, when ActionPlan is created. The objective is to make ActionTask able to see Opportunity Name and Account Name. Note - this makes Opportunity to ActionPlan having one-to-one relationship</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Action Plans</relationshipLabel>
    <relationshipName>Action_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>