News UAT/force-app/main/default/objects/Action_Plan__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>2015-07 NewsXtend</description>
    <label>Action Plan Start Date</label>
    <type>Date</type>
</CustomField>