News UAT/force-app/main/default/objects/Action_Plan__c/fields/To_Create_CampMgmt_MonthlyTask__c.field-meta.xml
<CustomField>
    <fullName>To_Create_CampMgmt_MonthlyTask__c</fullName>
    <defaultValue>true</defaultValue>
    <description>2015-07 NewsXtend - This checkbox decides whether to create default CampMagment-MonthlyTask when used by VF page NewsXtend_ActionPlan</description>
    <label>To Create CampMgmt-MonthlyTask</label>
    <type>Checkbox</type>
</CustomField>